--- a/analyses/dummy_modality.yaml
+++ b/analyses/dummy_modality.yaml
@@ -1,16 +1,11 @@
 output_config:
-  name: 'dti_fa'
-  base_data: '../raw_data/'
+  name: 'dummy_modality'
+  base_data: '../data/'
   output_dir: '../results/'
   copy_reference_data: False
   copy_reference_path: ""
   sample_filter:
     - 'filter_hc_mdd'
-    - 'filter_hc_mdd_acute'
-    - 'filter_hc_mdd_severe'
-    - 'filter_hc_mdd_male'
-    - 'filter_hc_mdd_female'
-    - 'filter_hc_mdd_age_24_28'
 
 pipelines:
   skip: False
